<resources>
    <string name="app_name">Penjual</string>
    <!--barang-->
    <string name="nama_barang">Nama Barang</string>
    <string name="deskripsi_barang">Deskripsi Barang</string>
    <string name="harga_barang">Harga Barang</string>
    <string name="negara_asal">Negara Asal</string>
    <string name="merk_barang">Merk Barang</string>
    <string name="masa_garansi">Masa Garansi</string>
    <string name="berat_barang">Berat Barang</string>
    <string name="stok_barang">Stok Barang</string>
    <string name="foto_barang">Foto Barang</string>
    <string name="ubah">Ubah</string>
    <string name="hapus">Hapus</string>
    <string name="simpan">Simpan</string>
    <string name="bayar">Bayar</string>

    <string name="detail_harga_barang">Harga Barang:</string>
    <string name="detail_negara_asal">Negara Asal:</string>
    <string name="detail_merk_barang">Merk Barang:</string>
    <string name="detail_masa_garansi">Masa Garansi:</string>
    <string name="detail_berat_barang">Berat Barang:</string>
    <string name="detail_stok_barang">Stok Barang:</string>

    <!--login-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="or">Or</string>

    <!--signup-->
    <string name="username_penjual">Username</string>
    <string name="password_penjual">Password</string>
    <string name="nama_penjual">Nama</string>
    <string name="no_telp_penjual">No Telp</string>
    <string name="alamat_penjual">Alamat</string>

    <!--.mainmenu-->
    <string name="setting">Setting</string>
    <string name="upload">Upload Foto</string>
    <string name="logout">Logout</string>
    <string name="link_upload">https://freeimage.host/</string>
    <string name="cari">Cari Foto</string>

    <!--pembayaran-->
    <string name="bayar_id_pesanan">ID Pesanan: </string>
    <string name="bayar_id_pembeli">ID Pembeli: </string>
    <string name="bayar_id_barang">ID Barang: </string>
    <string name="bayar_nama_barang">Nama Barang: </string>
    <string name="bayar_jumlah_beli">Jumlah Beli: </string>
    <string name="bayar_harga_barang">Harga Barang: </string>

    <string name="bayar_id_penjual">ID Penjual: </string>
    <string name="bayar_tgl_beli">Tanggal Beli: </string>
    <string name="bayar_total_harga">Total harga: </string>
    <string name="bayar_pembayaran">Pembayaran: </string>
    <string name="bayar_kembalian">Kembalian: </string>
    <string name="bayar_hitung_pembayaran">Hitung Pembayaran</string>

</resources>