<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="12dp"
    tools:context=".view.barang.PembayaranBarangActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui_bold"
                    android:textSize="14sp"
                    android:text="@string/bayar_id_pesanan" />

                <TextView
                    android:id="@+id/tv_id_pesanan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui"
                    android:textSize="14sp"
                    android:text="@string/bayar_id_pesanan" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui_bold"
                    android:textSize="14sp"
                    android:text="@string/bayar_id_penjual" />

                <TextView
                    android:id="@+id/tv_id_penjual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui"
                    android:textSize="14sp"
                    android:text="@string/bayar_id_penjual"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui_bold"
                    android:textSize="14sp"
                    android:text="@string/bayar_id_pembeli" />

                <TextView
                    android:id="@+id/tv_id_pembeli"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui"
                    android:textSize="14sp"
                    android:text="@string/bayar_id_pembeli"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui_bold"
                    android:textSize="14sp"
                    android:text="@string/bayar_id_barang" />

                <TextView
                    android:id="@+id/tv_id_barang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui"
                    android:textSize="14sp"
                    android:text="@string/bayar_id_barang"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui_bold"
                    android:textSize="14sp"
                    android:text="@string/bayar_nama_barang" />

                <TextView
                    android:id="@+id/tv_nama_barang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui"
                    android:textSize="14sp"
                    android:text="@string/bayar_nama_barang"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui_bold"
                    android:textSize="14sp"
                    android:text="@string/bayar_tgl_beli" />

                <TextView
                    android:id="@+id/tv_tgl_beli"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui"
                    android:textSize="14sp"
                    android:text="@string/bayar_tgl_beli"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui_bold"
                    android:textSize="14sp"
                    android:text="@string/bayar_jumlah_beli" />

                <TextView
                    android:id="@+id/tv_jumlah_beli"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui"
                    android:textSize="14sp"
                    android:text="@string/bayar_jumlah_beli"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui_bold"
                    android:textSize="14sp"
                    android:text="@string/bayar_harga_barang" />

                <TextView
                    android:id="@+id/tv_harga_barang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui"
                    android:textSize="14sp"
                    android:text="@string/bayar_harga_barang"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui_bold"
                    android:textSize="14sp"
                    android:text="@string/bayar_total_harga" />

                <TextView
                    android:id="@+id/tv_total_harga"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui"
                    android:textSize="14sp"
                    android:text="@string/bayar_total_harga"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui_bold"
                    android:textSize="14sp"
                    android:text="@string/bayar_pembayaran" />

                <EditText
                    android:id="@+id/edt_pembayaran"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:autofillHints=""
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_pembayaran"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bayar_hitung_pembayaran" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui_bold"
                    android:textSize="14sp"
                    android:text="@string/bayar_kembalian" />

                <TextView
                    android:id="@+id/tv_kembalian"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui"
                    android:textSize="14sp"
                    android:text="@string/bayar_kembalian"/>
            </LinearLayout>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/simpan" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>