<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:id="@+id/tv_nama_barang"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:layout_weight="1"
        android:textSize="24sp"
        android:fontFamily="@font/segoeui_bold"
        tools:text="@string/nama_barang"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_cover_detail"
            android:layout_width="155dp"
            android:layout_height="230dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:transitionName="cover"
            android:src="@color/teal_200"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_harga_barang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:fontFamily="@font/segoeui_bold"
            app:layout_constraintStart_toEndOf="@+id/iv_cover_detail"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/detail_harga_barang"/>

        <TextView
            android:id="@+id/tv_value_harga_barang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/segoeui"
            app:layout_constraintStart_toEndOf="@+id/tv_harga_barang"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Harga Barang"/>

        <TextView
            android:id="@+id/tv_negara_asal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:fontFamily="@font/segoeui_bold"
            app:layout_constraintStart_toEndOf="@+id/iv_cover_detail"
            app:layout_constraintTop_toBottomOf="@id/tv_harga_barang"
            android:text="@string/detail_negara_asal"/>

        <TextView
            android:id="@+id/tv_value_negara_asal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/segoeui"
            app:layout_constraintStart_toEndOf="@+id/tv_negara_asal"
            app:layout_constraintTop_toBottomOf="@id/tv_value_harga_barang"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Negara Asal"/>

        <TextView
            android:id="@+id/tv_merk_barang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:fontFamily="@font/segoeui_bold"
            app:layout_constraintStart_toEndOf="@+id/iv_cover_detail"
            app:layout_constraintTop_toBottomOf="@id/tv_negara_asal"
            android:text="@string/detail_merk_barang"/>

        <TextView
            android:id="@+id/tv_value_merk_barang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/segoeui"
            app:layout_constraintStart_toEndOf="@+id/tv_merk_barang"
            app:layout_constraintTop_toBottomOf="@id/tv_value_negara_asal"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Merk Barang"/>

        <TextView
            android:id="@+id/tv_masa_garansi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:fontFamily="@font/segoeui_bold"
            app:layout_constraintStart_toEndOf="@id/iv_cover_detail"
            app:layout_constraintTop_toBottomOf="@id/tv_value_merk_barang"
            android:text="@string/detail_masa_garansi"/>

        <TextView
            android:id="@+id/tv_value_masa_garansi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/segoeui"
            app:layout_constraintStart_toEndOf="@id/tv_masa_garansi"
            app:layout_constraintTop_toBottomOf="@id/tv_value_merk_barang"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Masa Garansi"/>

        <TextView
            android:id="@+id/tv_berat_barang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:fontFamily="@font/segoeui_bold"
            app:layout_constraintStart_toEndOf="@id/iv_cover_detail"
            app:layout_constraintTop_toBottomOf="@id/tv_value_masa_garansi"
            android:text="@string/detail_berat_barang"/>

        <TextView
            android:id="@+id/tv_value_berat_barang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/segoeui"
            app:layout_constraintStart_toEndOf="@id/tv_berat_barang"
            app:layout_constraintTop_toBottomOf="@id/tv_value_masa_garansi"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Berat Barang"/>

        <TextView
            android:id="@+id/tv_stok_barang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:fontFamily="@font/segoeui_bold"
            app:layout_constraintStart_toEndOf="@id/iv_cover_detail"
            app:layout_constraintTop_toBottomOf="@id/tv_value_berat_barang"
            android:text="@string/detail_stok_barang"/>

        <TextView
            android:id="@+id/tv_value_stok_barang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/segoeui"
            app:layout_constraintStart_toEndOf="@id/tv_stok_barang"
            app:layout_constraintTop_toBottomOf="@id/tv_value_berat_barang"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Stok Barang"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>